--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "express": "^4.17.1",
     "helmet": "^3.21.3",
     "jsonwebtoken": "^8.5.1",
+    "minimist": "^1.2.5",
     "mongodb": "^3.5.3",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
+    "@babel/cli": "^7.12.1",
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "babel-jest": "^24.4.0",
+    "babel-jest": "^26.6.3",
     "babel-plugin-inline-dotenv": "^1.5.0",
     "dotenv": "^6.2.0",
     "eslint": "^5.15.1",
@@ -44,9 +45,9 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "faker": "^4.1.0",
-    "jest": "^24.3.1",
+    "jest": "^26.6.3",
     "jest-environment-node": "^25.1.0",
-    "nodemon": "^1.18.10",
+    "nodemon": "^2.0.6",
     "rimraf": "^2.6.3",
     "supertest": "^4.0.2"
   }
